@@ -18,7 +18,7 @@
 <tr valign="top"><td valign="baseline" align="left"%>
 <nobr><b><font color="#000000">queue</font></b></nobr></td><td valign="baseline"> &nbsp; </td><td valign="baseline" align="left" width="99%"></td><td valign="baseline" align="right">[<i>Unit&nbsp;Class</i>]
 </td></tr></table></p>
-<p><span class="fndoclabel">Package</span>&nbsp;&nbsp;&nbsp;<code>:gbb-tools</code>
+<p><span class="fndoclabel">Package</span>&nbsp;&nbsp;&nbsp;<code>:gbbopen</code>
 </p>
 <p><span class="fndoclabel">Module</span>&nbsp;&nbsp;&nbsp;<code>:queue</code>
 </p>
