@@ -42,6 +42,6 @@
 <li><a href="ref-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;February 18, 2008</nobr>
-<nobr>5:26&nbsp;EST</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;February 19, 2008</nobr>
+<nobr>9:35&nbsp;EST</nobr></address><br />
 </body></html>
